@@ -457,8 +457,8 @@
     <div class="tab">
        0 - Part number (this must be set first)<br>
        1 - Program Change<br>
-       2 - controller number (0 - 119)<br>
-       3 - controller value<br>
+       2 - Controller number (0 - 119)<br>
+       3 - Controller value<br>
        4 - Channel number for this part
        <div class="tab">
           (0 - 15) select for all messages<br>
@@ -466,6 +466,10 @@
           (32 - 47) mute<br>
        </div>
        5 * - Audio destination (0 - 2) main/part/both<br>
+       8 - Send part output the System effect 1<br>
+       9 - Send part output the System effect 2<br>
+       10 - Send part output the System effect 3<br>
+       11 - Send part output the System effect 4<br>
        64 * - Key shift (28 - 100) gives -36 to +36
     </div>
     * requires the part to be enabled
